--- a/.github/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
+++ b/.github/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
@@ -43,11 +43,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="bin\Debug\ConsoleApp1.exe.config" />
+    <None Include="obj\Debug\ConsoleApp1.csproj.AssemblyReference.cache" />
+    <None Include="obj\Debug\ConsoleApp1.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\ConsoleApp1.exe" />
+    <Content Include="bin\Debug\ConsoleApp1.pdb" />
+    <Content Include="obj\Debug\ConsoleApp1.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\ConsoleApp1.exe" />
+    <Content Include="obj\Debug\ConsoleApp1.pdb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
